--- a/PPAI_Implementacion.csproj
+++ b/PPAI_Implementacion.csproj
@@ -72,8 +72,20 @@
     <Compile Include="Interfaz\MenuInicial.Designer.cs">
       <DependentUpon>MenuInicial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Interfaz\PantallaReservaTurno.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Interfaz\PantallaReservaTurno.Designer.cs">
+      <DependentUpon>PantallaReservaTurno.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Interfaz\MenuInicial.resx">
+      <DependentUpon>MenuInicial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Interfaz\PantallaReservaTurno.resx">
+      <DependentUpon>PantallaReservaTurno.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
